--- a/src/app/@modules/home/components/table-consultas-home/table-consultas-home.component.html
+++ b/src/app/@modules/home/components/table-consultas-home/table-consultas-home.component.html
@@ -57,7 +57,7 @@
             <span>{{ consulta?.medico?.nome }}</span>
           </td>
           <td>
-            <span class="bold">Ativo</span>
+            <span class="bold">{{ consulta?.status }}</span>
           </td>
           <td>
             <a (click)="openModalDetalhes('detalhe-consulta', consulta)"> visualizar</a>
