--- a/src/app/@modules/consultas/lista-paciente/lista-paciente.component.html
+++ b/src/app/@modules/consultas/lista-paciente/lista-paciente.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-12 mb-3">
     <app-card-content>
       <div class="row" [formGroup]="formOptions">
@@ -36,7 +36,7 @@
       </div>
     </app-card-content>
   </div>
-</div>
+</div> -->
 
 <div class="row pt-4">
   <div class="col-12 table-responsive">
