--- a/src/app/@modules/protuario-medico/components/table-prontuarios/table-prontuarios.component.html
+++ b/src/app/@modules/protuario-medico/components/table-prontuarios/table-prontuarios.component.html
@@ -27,3 +27,7 @@
     </table>
   </div>
 </div>
+<app-modal-animation modalID="detalhes-prontuario" modalClass="md-effect-10">
+  <div class="md-body container p-0"></div>
+</app-modal-animation>
+<app-loader *ngIf="loading"></app-loader>
