--- a/src/app/@modules/protuario-medico/protuario-medico.component.html
+++ b/src/app/@modules/protuario-medico/protuario-medico.component.html
@@ -1,10 +1,9 @@
 <div class="container-fluid">
   <div class="row m-0">
     <div class="col-12">
-      <app-card-content>
+      <!-- <app-card-content>
         <div class="row">
           <div class="col-12 d-flex justify-content-between pe-0">
-            <!-- <button type="button" mat-raised-button class="btn-primary" (click)="openDialog()">Novo colaborador</button> -->
           </div>
           <div class="col-md-5 col-sm-12">
             <mat-form-field appearance="outline" class="w-100">
@@ -19,7 +18,7 @@
             </button>
           </div>
         </div>
-      </app-card-content>
+      </app-card-content> -->
     </div>
     <div class="col-12">
       <app-table-prontuarios></app-table-prontuarios>
