chore: implementando PEP pro Paciente e inicio da integração com Download dos anexos

--- a/src/app/@modules/consultas/lista-paciente/lista-paciente.component.html
+++ b/src/app/@modules/consultas/lista-paciente/lista-paciente.component.html
@@ -124,7 +124,7 @@
       </tbody>
     </table>
   </div>
-  <div class="col-12 d-flex justify-content-center" *ngIf="paginationVisible">
+  <div class="col-12 d-flex justify-content-center">
     <pagination-controls
       (pageChange)="pageChanged($event)"
       maxSize="5"
