chore: implementando download de arquivos

--- a/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
+++ b/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
@@ -201,7 +201,7 @@
                   <span>{{ anexo?.formato }}</span>
                 </td>
                 <td>
-                  <button mat-button type="button" (click)="downloadAnexo(anexo.id, anexo.formato)">
+                  <button mat-button type="button" (click)="downloadFile(anexo.url)">
                     <i class="feather icon-download"></i>
                     baixar
                   </button>
