--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -76,7 +76,7 @@
                   </mat-error>
                 </mat-form-field>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12 mt-2">
                 <button
                   class="btn btn-primary"
                   type="button"
