--- a/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
+++ b/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
@@ -108,8 +108,18 @@
         </mat-form-field>
       </div>
 
+      <div class="col-12 mb-2">
+        <button mat-button color="primary" (click)="accordion.openAll()">
+          <i class="feather icon-plus"></i>
+          Maximizar todos
+        </button>
+        <button mat-button color="accent" (click)="accordion.closeAll()">
+          <i class="feather icon-minus"></i>
+          Minimizar todos
+        </button>
+      </div>
       <div class="col-12">
-        <mat-accordion class="">
+        <mat-accordion multi>
           <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
             <mat-expansion-panel-header>
               <mat-panel-title>
@@ -176,7 +186,7 @@
       </div>
       <div class="col-12">
         <div class="table-responsive">
-          <table class="table" *ngIf="prontuario?.prontuario?.documentos.length > 0; else semregistro">
+          <table class="table" *ngIf="prontuario?.prontuario?.documentos?.length > 0; else semregistro">
             <thead>
               <tr>
                 <th scope="col">#</th>
