--- a/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
+++ b/src/app/@modules/paciente/components/prontuario-medico-paciente/prontuario-medico-paciente.component.html
@@ -123,6 +123,22 @@
             </mat-error>
           </mat-form-field>
         </div>
+        <div class="col-md-12">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Dignóstico</mat-label>
+            <textarea
+              formControlName="diagnostico"
+              matInput
+              placeholder="Digite o diagnostico do paciente aqui..."
+              autocomplete="off"
+              rows="5"
+            ></textarea>
+            <mat-error>
+              <app-error-control-message [control]="formProntuario.controls.descSumario" label="Sumário">
+              </app-error-control-message>
+            </mat-error>
+          </mat-form-field>
+        </div>
         <div class="col-md-12 mb-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Sumário médico</mat-label>
@@ -251,6 +267,10 @@
                       </mat-error>
                     </mat-form-field>
                     <mat-form-field>
+                      <mat-label>Dosagem</mat-label>
+                      <input matInput formControlName="dosagem" />
+                    </mat-form-field>
+                    <mat-form-field>
                       <mat-label>Duração tratamento</mat-label>
                       <input matInput formControlName="duracaoTratamento" />
                       <mat-error class="p-0">
@@ -373,10 +393,12 @@
               </ng-select>
             </div>
             <div class="col-4 ng-star-inserted d-flex align-items-center mt-4">
-              <button mat-button class="new" (click)="addNewObjectFile()" *ngIf="i == 0">
-                <i class="feather icon-plus"></i>
-                novo arquivo
-              </button>
+              <ng-container *ngIf="i === 0">
+                <button mat-button class="new" (click)="addNewObjectFile()" [disabled]="file.value.file === null">
+                  <i class="feather icon-plus"></i>
+                  novo arquivo
+                </button>
+              </ng-container>
             </div>
             <div class="col-12">
               <file-upload [animation]="animationFile" formControlName="file" [fileslimit]="2">
@@ -410,6 +432,9 @@
         <i class="feather icon-check"></i>
         salvar prontuário
       </button>
+    </div>
+    <div class="col-12">
+      <app-form-debug [form]="formProntuario"></app-form-debug>
     </div>
   </app-card-content>
 </div>
