--- a/src/app/@modules/paciente/components/table-medico/table-medico.component.html
+++ b/src/app/@modules/paciente/components/table-medico/table-medico.component.html
@@ -21,6 +21,7 @@
     <table class="w-100 table-tcc" *ngIf="consultas.length > 0; else semregistro">
       <thead class="text-uppercase">
         <tr>
+          <th scope="col">#</th>
           <th scope="col">Paciente</th>
           <th scope="col">Procedimento</th>
           <th scope="col">Início</th>
@@ -42,6 +43,7 @@
             index as i
           "
         >
+          <td class="td-format">{{ i + 1 }}</td>
           <td class="d-flex align-items-center">
             <img [src]="verificaSexoUsuario(consulta?.paciente?.sexo)" alt="Icon" class="bg-profile d-inline-block" />
             <div class="d-inline-block name-profile">
