--- a/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
+++ b/src/app/@modules/protuario-medico/components/detalhes-prontuario/detalhes-prontuario.component.html
@@ -86,7 +86,7 @@
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Descrição geral da consulta</mat-label>
           <textarea
-            [value]="prontuario?.prontuario?.descProntuario"
+            [value]="prontuario?.prontuario?.descProntuario ? prontuario?.prontuario?.descProntuario : 'Sem registro'"
             matInput
             disabled
             placeholder="Descrição geral da consulta"
@@ -94,12 +94,27 @@
             rows="5"
           ></textarea>
         </mat-form-field>
+        <span> </span>
+      </div>
+      <div class="col-md-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Diagnostico</mat-label>
+          <textarea
+            [value]="prontuario?.prontuario?.diagnostico ? prontuario?.prontuario?.diagnostico : 'Sem registro'"
+            matInput
+            disabled
+            placeholder="Diagnostico médico"
+            autocomplete="off"
+            rows="5"
+          ></textarea>
+        </mat-form-field>
+        <span> </span>
       </div>
       <div class="col-md-12 mb-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Sumário médico</mat-label>
           <textarea
-            [value]="prontuario?.prontuario?.descSumario"
+            [value]="prontuario?.prontuario?.descSumario ? prontuario?.prontuario?.descSumario : 'Sem registro'"
             matInput
             disabled
             autocomplete="off"
@@ -127,8 +142,8 @@
               </mat-panel-title>
               <mat-panel-description> </mat-panel-description>
             </mat-expansion-panel-header>
-            <ul *ngIf="prontuario?.paciente?.dadosMedicos?.alergias.length > 0; else semregistro">
-              <li *ngFor="let alergia of prontuario?.paciente?.dadosMedicos?.alergias">
+            <ul *ngIf="prontuario?.paciente?.prontuario?.alergias.length > 0; else semregistro">
+              <li *ngFor="let alergia of prontuario?.paciente?.prontuario?.alergias">
                 <span> - {{ alergia?.descAlergia }}</span>
               </li>
             </ul>
@@ -144,8 +159,8 @@
               </mat-panel-title>
               <mat-panel-description> </mat-panel-description>
             </mat-expansion-panel-header>
-            <ul *ngIf="prontuario?.paciente?.dadosMedicos?.medicamentos.length > 0; else semregistro">
-              <li *ngFor="let medicamento of prontuario?.paciente?.dadosMedicos?.medicamentos" class="medicamento py-2">
+            <ul *ngIf="prontuario?.paciente?.prontuario?.medicamentos.length > 0; else semregistro">
+              <li *ngFor="let medicamento of prontuario?.paciente?.prontuario?.medicamentos" class="medicamento py-2">
                 <span class="d-block"><strong>Descrição:</strong> {{ medicamento?.descMedicamento }}</span>
                 <span class="d-block"><strong>Duração:</strong> {{ medicamento?.duracaoTratamento }}</span>
                 <span class="d-block medicamento__registro"
@@ -166,8 +181,8 @@
               </mat-panel-title>
               <mat-panel-description> </mat-panel-description>
             </mat-expansion-panel-header>
-            <ul *ngIf="prontuario?.paciente?.dadosMedicos?.doencasCronicas.length > 0; else semregistro">
-              <li *ngFor="let cronica of prontuario?.paciente?.dadosMedicos?.doencasCronicas">
+            <ul *ngIf="prontuario?.paciente?.prontuario?.doencasCronicas.length > 0; else semregistro">
+              <li *ngFor="let cronica of prontuario?.paciente?.prontuario?.doencasCronicas">
                 <span> - {{ cronica?.descDoenca }}</span>
               </li>
             </ul>
