--- a/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
+++ b/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
@@ -42,7 +42,7 @@
       </div>
     </app-card-content>
   </div>
-  <div class="col-md-6 col-sm-12 mt-sm-2 mt-md-0">
+  <div class="col-md-6 col-sm-12 mt-3 mt-md-0">
     <app-card-content
       cardClass="padd-footer"
       isCardFooter="true"
