--- a/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
+++ b/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
@@ -1,48 +1,51 @@
-<div class="bg-box-info shadow">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 name-medico mt-4">
-        <h3 class="m-0">{{ dadosUser?.paciente?.nome }}</h3>
-        <span>Paciente</span>
+<app-card-content>
+  <h3 class="m-0 mb-3">Dados gerais</h3>
+  <div class="bg-box-info shadow">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 name-medico mt-4">
+          <h3 class="m-0">{{ dadosUser?.paciente?.nome }}</h3>
+          <span>Paciente</span>
+        </div>
+        <div class="col-auto pb-3 description">
+          <span>Altura</span>
+          <h4 class="m-0">{{ dadosMedicos?.altura ? dadosMedicos?.altura : '--' }}</h4>
+        </div>
+        <div class="col-auto pb-3 description">
+          <span>Peso</span>
+          <h4 class="m-0">{{ dadosMedicos?.peso ? dadosMedicos?.peso : '--' }}</h4>
+        </div>
+        <div class="col-auto pb-3 description">
+          <span>Tipo sanguíneo</span>
+          <h4 class="m-0">
+            {{
+              dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo
+                ? dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo
+                : '--'
+            }}
+          </h4>
+        </div>
       </div>
-      <div class="col-auto pb-3 description">
-        <span>Altura</span>
-        <h4 class="m-0">{{ dadosMedicos?.altura ? dadosMedicos?.altura : '--' }}</h4>
+      <div class="row">
+        <div class="col-auto pb-3 description">
+          <span>IMC</span>
+          <h4 class="m-0">{{ dadosMedicos?.vlImc ? dadosMedicos?.vlImc : '--' }}</h4>
+        </div>
+        <div class="col-auto pb-3 description">
+          <span>Descrição IMC</span>
+          <h4 class="m-0">{{ dadosMedicos?.descImc ? dadosMedicos?.descImc : '--' }}</h4>
+        </div>
       </div>
-      <div class="col-auto pb-3 description">
-        <span>Peso</span>
-        <h4 class="m-0">{{ dadosMedicos?.peso ? dadosMedicos?.peso : '--' }}</h4>
-      </div>
-      <div class="col-auto pb-3 description">
-        <span>Tipo sanguíneo</span>
-        <h4 class="m-0">
-          {{
-            dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo
-              ? dadosMedicos?.tipoSanguineo?.descricaoTipoSanguineo
-              : '--'
-          }}
-        </h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-auto pb-3 description">
-        <span>IMC</span>
-        <h4 class="m-0">{{ dadosMedicos?.vlImc ? dadosMedicos?.vlImc : '--' }}</h4>
-      </div>
-      <div class="col-auto pb-3 description">
-        <span>Descrição IMC</span>
-        <h4 class="m-0">{{ dadosMedicos?.descImc ? dadosMedicos?.descImc : '--' }}</h4>
-      </div>
-    </div>
-    <div class="row">
-      <!-- <div class="col-auto pb-3 description">
-        <span>Última consulta</span>
-        <h4 class="m-0">{{ dadosMedicos?.dtAtualizacao }}</h4>
-      </div> -->
-      <div class="col-auto pb-3 description">
-        <span>Última atualização</span>
-        <h4 class="m-0">{{ dadosMedicos?.dtAtualizacao }}</h4>
+      <div class="row">
+        <!-- <div class="col-auto pb-3 description">
+          <span>Última consulta</span>
+          <h4 class="m-0">{{ dadosMedicos?.dtAtualizacao }}</h4>
+        </div> -->
+        <div class="col-auto pb-3 description">
+          <span>Última atualização</span>
+          <h4 class="m-0">{{ dadosMedicos?.dtAtualizacao }}</h4>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</app-card-content>
