--- a/src/main.scss
+++ b/src/main.scss
@@ -40,3 +40,7 @@
 .mat-error {
   // padding-top: 0 !important;
 }
+
+.bg-card-grafic {
+  // background: linear-gradient(45deg,#4099ff,#73b4ff)!important;
+}
