--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -9,13 +9,19 @@
               <app-box-info-paciente></app-box-info-paciente>
             </div>
             <div class="col-12 mt-3 mb-md-0 mb-3">
-              <app-pie-especialidades-paciente></app-pie-especialidades-paciente>
-              <!-- <app-table-consultas-home [perfil]="perfil" [idMedico]="idPerfil"></app-table-consultas-home> -->
+              <app-pie-especialidades-paciente
+                [quantitativosPorTipoEspecializacao]="quantitativosPorTipoEspecializacao"
+              ></app-pie-especialidades-paciente>
+            </div>
+            <div class="col-12 mt-3 mb-md-0 mb-3">
+              <app-semi-donout-procedimento
+                [quantitativosPorTipoProcedimento]="quantitativosPorTipoProcedimento"
+              ></app-semi-donout-procedimento>
             </div>
           </div>
         </div>
         <div class="col-md-7 col-sm-12">
-          <app-estatisticas-paciente></app-estatisticas-paciente>
+          <app-estatisticas-paciente [quantitativoDadosMedicos]="quantitativoDadosMedicos"></app-estatisticas-paciente>
           <div class="row mt-3 m-0">
             <div class="col-12 col-md-6 mb-md-0 mb-3">
               <app-nova-consulta-paciente></app-nova-consulta-paciente>
@@ -23,10 +29,13 @@
             <div class="col-12 col-md-6">
               <app-minhas-consultas></app-minhas-consultas>
             </div>
+            <div class="col-12 mt-3">
+              <app-tabela-medicamentos></app-tabela-medicamentos>
+            </div>
           </div>
         </div>
-        <div class="col-12 my-3">
-          <app-tabela-medicamentos></app-tabela-medicamentos>
+        <div class="col-12 mt-3">
+          <app-tabela-diagnosticos-data [diagnosticosPorData]="diagnosticosPorData"></app-tabela-diagnosticos-data>
         </div>
       </div>
     </div>
