chore: integrando Dashboard Administrador

--- a/src/app/@modules/home/components/paciente/tabela-diagnosticos-data/tabela-diagnosticos-data.component.html
+++ b/src/app/@modules/home/components/paciente/tabela-diagnosticos-data/tabela-diagnosticos-data.component.html
@@ -1,5 +1,5 @@
 <app-card-content>
-  <h3 class="my-2 ps-1">Dignósticos</h3>
+  <h3 class="my-2 ps-1">Dignósticos Recentes</h3>
   <div class="table-responsive">
     <table class="table" *ngIf="diagnosticosPorData?.length > 0; else semregistro">
       <thead>
