--- a/src/app/@modules/home/components/administrador/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
+++ b/src/app/@modules/home/components/administrador/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
@@ -10,8 +10,8 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title1">333</h1>
-            <span class="subtitle d-block">Total de Consultas</span>
+            <h1 class="m-0 title1">{{ pendente?.quantidade }}</h1>
+            <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
             <i class="feather icon-bar-chart-2"></i>
@@ -21,7 +21,7 @@
       <div class="app-card-footer">
         <div class="row text-left py-3 text-white m-0">
           <div class="col-8">
-            <span>abertas</span>
+            <span>{{ pendente?.descricao }}</span>
           </div>
           <div class="col d-flex align-items-center justify-content-center">
             <i class="feather icon-activity"></i>
@@ -41,8 +41,8 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title2">333</h1>
-            <span class="subtitle d-block">Total de Consultas</span>
+            <h1 class="m-0 title2">{{ emAndamento?.quantidade }}</h1>
+            <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
             <i class="feather icon-bar-chart-2"></i>
@@ -52,7 +52,7 @@
       <div class="app-card-footer">
         <div class="row text-left py-3 text-white m-0">
           <div class="col-8">
-            <span>abertas</span>
+            <span>{{ emAndamento?.descricao }}</span>
           </div>
           <div class="col d-flex align-items-center justify-content-center">
             <i class="feather icon-activity"></i>
@@ -72,8 +72,8 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title3">333</h1>
-            <span class="subtitle d-block">Total de Consultas</span>
+            <h1 class="m-0 title3">{{ cancelada?.quantidade }}</h1>
+            <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
             <i class="feather icon-bar-chart-2"></i>
@@ -83,7 +83,7 @@
       <div class="app-card-footer">
         <div class="row text-left py-3 text-white m-0">
           <div class="col-8">
-            <span>abertas</span>
+            <span>{{ cancelada?.descricao }}</span>
           </div>
           <div class="col d-flex align-items-center justify-content-center">
             <i class="feather icon-activity"></i>
@@ -103,8 +103,8 @@
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
-            <h1 class="m-0 title4">333</h1>
-            <span class="subtitle d-block">Total de Consultas</span>
+            <h1 class="m-0 title4">{{ finalizada?.quantidade }}</h1>
+            <span class="subtitle d-block">Total Geral</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
             <i class="feather icon-bar-chart-2"></i>
@@ -114,7 +114,7 @@
       <div class="app-card-footer">
         <div class="row text-left py-3 text-white m-0">
           <div class="col-8">
-            <span>abertas</span>
+            <span>{{ finalizada?.descricao }}</span>
           </div>
           <div class="col d-flex align-items-center justify-content-center">
             <i class="feather icon-activity"></i>
