--- a/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
+++ b/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
@@ -1,5 +1,28 @@
 <div class="row">
-  <div class="col-md-6 col-sm-12 pt-3 pt-md-0">
+  <div class="col-12 pt-3 pt-md-0" id="chart">
+    <app-card-content
+      cardClass="padd-footer"
+      isCardFooter="true"
+      footerClass="bg-card-primary"
+      [loadingLine]="loading"
+      progressClass="progress-azul"
+    >
+      <!-- <apx-chart
+        [series]="chart1.series"
+        [chart]="chart1.chart"
+        [title]="chart1.title"
+        [colors]="chart1.colors"
+      ></apx-chart> -->
+      <apx-chart
+        [series]="chartOptions?.series"
+        [chart]="chartOptions?.chart"
+        [dataLabels]="chartOptions?.dataLabels"
+        [plotOptions]="chartOptions?.plotOptions"
+        [xaxis]="chartOptions?.xaxis"
+      ></apx-chart>
+    </app-card-content>
+  </div>
+  <!-- <div class="col-md-6 col-sm-12 pt-3 pt-md-0">
     <app-card-content
       cardClass="padd-footer"
       isCardFooter="true"
@@ -82,5 +105,5 @@
         </div>
       </div>
     </app-card-content>
-  </div>
+  </div> -->
 </div>
