--- a/src/app/@modules/cadastro/cadastro.component.html
+++ b/src/app/@modules/cadastro/cadastro.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 mb-3">
       <app-card-content>
         <div class="row">
-          <div class="col-md-5 col-sm-12">
+          <div class="col-auto">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Pesquise pelo nome ou CPF</mat-label>
               <input type="text" matInput placeholder="Digite aqui" autocomplete="off" />
