--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -100,6 +100,9 @@
     </div>
   </ng-container>
   <ng-container *ngIf="perfil === 'AUXILIAR'">
+    <div class="col-12">
+      <app-quantitativo-usuarios [quantitativoUsuarios]="quantitativoUsuarios"></app-quantitativo-usuarios>
+    </div>
     <div class="container-fluid">
       <div class="row m-0">
         <div class="col-md-3 col-12 d-flex justify-content-center align-items-center pt-3 pt-md-0">
@@ -107,6 +110,12 @@
         </div>
         <div class="col-md-3 col-12 d-flex justify-content-center align-items-center pt-3 pt-md-0">
           <app-card-novo-paciente></app-card-novo-paciente>
+        </div>
+
+        <div class="col-md-6 col-12">
+          <app-quantitativo-dados-clinica
+            [consultaMensalPorStatus]="consultaMensalPorStatus"
+          ></app-quantitativo-dados-clinica>
         </div>
         <div class="col-12 mt-3">
           <app-table-consultas-home [perfil]="perfil"></app-table-consultas-home>
