--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -67,10 +67,7 @@
           <app-quantitativo-dados-clinica
             [consultaMensalPorStatus]="consultaMensalPorStatus"
           ></app-quantitativo-dados-clinica>
-          <app-bar-pacientes-medico
-            class="mt-3"
-            [consultaMensalPorStatus]="consultaMensalPorStatus"
-          ></app-bar-pacientes-medico>
+          <app-bar-pacientes-medico class="mt-3" [pacienteConsulta]="pacienteConsulta"></app-bar-pacientes-medico>
         </div>
       </div>
     </div>
