--- a/src/app/@modules/especialidades/components/form-cadastro-especialidade/form-cadastro-especialidade.component.html
+++ b/src/app/@modules/especialidades/components/form-cadastro-especialidade/form-cadastro-especialidade.component.html
@@ -4,32 +4,21 @@
       <h3 class="mt-3 mb-0">Especialidade</h3>
       <hr class="my-1" />
     </div>
-    <!-- /col-md-12 -->
   </div>
-  <!-- /row -->
-  <form autocomplete="off">
+  <form autocomplete="off" [formGroup]="form">
     <div class="row">
       <div class="col-md-12">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Nome</mat-label>
-          <input type="text" matInput placeholder="" autocomplete="off" /><!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
+          <mat-label>Descrição</mat-label>
+          <input type="text" matInput placeholder="" autocomplete="off" formControlName="descEspecializacao" />
+          <mat-error>
+            <app-error-control-message
+              [control]="form.controls.descEspecializacao"
+              label="Descrição"
+            ></app-error-control-message>
+          </mat-error>
         </mat-form-field>
       </div>
-      <!--/col-md-6-->
-      <div class="col-md-12">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Descrição <span class="optional">(Opcional)</span></mat-label>
-          <textarea matInput placeholder="Digite os sintomas do paciente aqui..." autocomplete="off"></textarea>
-          <!-- formControlName="username"-->
-          <!-- <mat-error>
-              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-            </mat-error> -->
-        </mat-form-field>
-      </div>
-      <!--/col-md-6-->
     </div>
   </form>
   <div class="row d-flex justify-content-end ms-1 mt-4">
@@ -40,7 +29,7 @@
       </button>
     </div>
     <div class="col-2 p-0">
-      <button type="submit" class="btn btn-primary-tcc p-2">
+      <button type="submit" class="btn btn-primary-tcc p-2" (click)="save()">
         <i class="feather icon-check"></i>
         salvar
       </button>
