--- a/src/app/@modules/especialidades/components/table-especialidades/table-especialidades.component.html
+++ b/src/app/@modules/especialidades/components/table-especialidades/table-especialidades.component.html
@@ -17,7 +17,7 @@
               type="button"
               class="btn-secondary me-2"
               matTooltip="Editar"
-              (click)="modal.show('editar-especialidade')"
+              (click)="openModal(especialidade)"
             >
               <i class="feather icon-edit-2"></i>
             </button>
@@ -27,7 +27,7 @@
               type="button"
               class="btn-danger me-2"
               matTooltip="Excluir"
-              (click)="confirmModal()"
+              (click)="confirmModal(especialidade.id)"
             >
               <i class="feather icon-x"></i>
             </button>
@@ -44,7 +44,7 @@
         <i class="feather icon-x" (click)="modal.close('editar-especialidade')"></i>
       </div>
     </div>
-    <form action="">
+    <form [formGroup]="form">
       <div class="row m-0 py-3">
         <div class="col-12">
           <h3 class="mt-3 mb-0">Editar especialidade</h3>
@@ -53,18 +53,18 @@
         <div class="col-md-12">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Nome</mat-label>
-            <input type="text" matInput placeholder="" autocomplete="off" />
+            <input type="text" matInput placeholder="" autocomplete="off" formControlName="descEspecializacao" />
           </mat-form-field>
         </div>
         <div class="row d-flex justify-content-end ms-1 mt-4">
           <div class="col-2 p-0">
-            <button type="button" class="btn btn-secondary-tcc p-2">
+            <button type="button" class="btn btn-secondary-tcc p-2" (click)="clearForm()">
               <i class="feather icon-x"></i>
               limpar
             </button>
           </div>
           <div class="col-2 p-0">
-            <button type="submit" class="btn btn-primary-tcc p-2">
+            <button type="button" class="btn btn-primary-tcc p-2" (click)="update()">
               <i class="feather icon-check"></i>
               salvar
             </button>
@@ -74,3 +74,4 @@
     </form>
   </div>
 </app-modal-animation>
+<app-loader *ngIf="loading"></app-loader>
