--- a/src/app/@modules/home/home.component.html
+++ b/src/app/@modules/home/home.component.html
@@ -81,7 +81,10 @@
 
       <div class="row m-0">
         <div class="col-md-6 col-12">
-          <app-dados-gerais-clinica [medicoAtendimento]="medicoAtendimento"></app-dados-gerais-clinica>
+          <app-dados-gerais-clinica
+            [medicoAtendimento]="medicoAtendimento"
+            title="Ranking de Atendimento"
+          ></app-dados-gerais-clinica>
         </div>
         <div class="col-md-6 col-12">
           <app-quantitativo-dados-clinica
