--- a/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
+++ b/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
@@ -1,4 +1,7 @@
 <div class="row">
+  <div class="col-12">
+    <h3 class="my-2">{{ title }}</h3>
+  </div>
   <div class="col-12 pt-3 pt-md-0" id="chart">
     <app-card-content
       cardClass="padd-footer"
