--- a/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
+++ b/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
@@ -1,47 +1,7 @@
-<!-- <app-apex-chart chartID="support-chart-1" [chartConfig]="this.chart1"></app-apex-chart> -->
-
 <div class="row m-0">
-  <!-- <div class="col-sm-12 pt-3 pt-md-0">
-    <app-card-content
-      cardClass="padd-footer"
-      isCardFooter="true"
-      footerClass="bg-card-primary"
-      [loadingLine]="loading"
-      progressClass="progress-azul"
-    >
-      <div class="card-body">
-        <div class="row">
-          <div class="col-sm-12">
-            <h1 class="m-0 title">222</h1>
-            <span class="subtitle d-block">Total de Consultas</span>
-            <p class="desc m-0">Quantitativo das consultas médicas</p>
-          </div>
-        </div>
-      </div>
-      <apx-chart
-        [series]="chart1.series"
-        [chart]="chart1.chart"
-        [title]="chart1.title"
-        [colors]="chart1.colors"
-      ></apx-chart>
-      <div class="app-card-footer">
-        <div class="row text-center py-3 text-white">
-          <div class="col">
-            <h4 class="m-0 text-white">10</h4>
-            <span>Abertas</span>
-          </div>
-          <div class="col">
-            <h4 class="m-0 text-white">10</h4>
-            <span>Andamento</span>
-          </div>
-          <div class="col">
-            <h4 class="m-0 text-white">10</h4>
-            <span>Finalizadas</span>
-          </div>
-        </div>
-      </div>
-    </app-card-content>
-  </div> -->
+  <div class="col-12">
+    <h3 class="my-2">Quantitativo Consultas</h3>
+  </div>
   <div class="col-md-6 col-12 pt-3 pt-md-0">
     <app-card-content
       cardClass="padd-footer"
