--- a/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
+++ b/src/app/@modules/home/components/paciente/box-info-paciente/box-info-paciente.component.html
@@ -1,5 +1,10 @@
+<div class="row m-0">
+  <div class="col-12 p-0">
+    <h3 class="my-2">Dados Gerais</h3>
+  </div>
+</div>
 <app-card-content>
-  <h3 class="m-0 mb-3">Dados gerais</h3>
+  <h3 class="m-0 mb-3"></h3>
   <div class="bg-box-info shadow">
     <div class="container">
       <div class="row">
