chore: ajustei nas labels e retirando comentários

--- a/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
+++ b/src/app/@modules/home/components/charts/estatisticas-paciente/estatisticas-paciente.component.html
@@ -76,7 +76,7 @@
         <div class="row m-0">
           <div class="col-sm-8">
             <h1 class="m-0 title3">{{ quantitativoDadosMedicos?.quantitativoProcedimento }}</h1>
-            <span class="subtitle d-block">Total de Cadastrado</span>
+            <span class="subtitle d-block">Total Cadastrado</span>
           </div>
           <div class="col-4 d-flex align-items-center justify-content-center">
             <i class="feather icon-bar-chart-2"></i>
