--- a/src/app/@modules/home/components/paciente/tabela-diagnosticos-data/tabela-diagnosticos-data.component.html
+++ b/src/app/@modules/home/components/paciente/tabela-diagnosticos-data/tabela-diagnosticos-data.component.html
@@ -1,30 +1,32 @@
-<app-card-content>
-  <h3 class="my-2 ps-1">Dignósticos Recentes</h3>
-  <div class="table-responsive">
-    <table class="table" *ngIf="diagnosticosPorData?.length > 0; else semregistro">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Procedimento</th>
-          <th scope="col">Dignóstico</th>
-          <th scope="col">Data</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of diagnosticosPorData; index as i">
-          <td class="text-capitalize">{{ i + 1 }}</td>
-          <td class="text-capitalize">{{ item?.procedimento ? item?.procedimento : 'Sem registro' }}</td>
-          <td>
-            <span>{{ item?.diagnostico ? item?.diagnostico : 'Sem registro' }}</span>
-          </td>
-          <td>
-            <span>{{ item?.data | date: 'shortDate' }}</span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</app-card-content>
+<div class="mb-4">
+  <app-card-content>
+    <h3 class="my-2 ps-1">Diagnósticos Recentes</h3>
+    <div class="table-responsive">
+      <table class="table" *ngIf="diagnosticosPorData?.length > 0; else semregistro">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Procedimento</th>
+            <th scope="col">Dignóstico</th>
+            <th scope="col">Data</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of diagnosticosPorData; index as i">
+            <td class="text-capitalize">{{ i + 1 }}</td>
+            <td class="text-capitalize">{{ item?.procedimento ? item?.procedimento : 'Sem registro' }}</td>
+            <td>
+              <span>{{ item?.diagnostico ? item?.diagnostico : 'Sem registro' }}</span>
+            </td>
+            <td>
+              <span>{{ item?.data | date: 'shortDate' }}</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </app-card-content>
+</div>
 
 <ng-template #semregistro>
   <div class="row m-0">
