--- a/src/app/@modules/home/components/paciente/tabela-medicamentos/tabela-medicamentos.component.html
+++ b/src/app/@modules/home/components/paciente/tabela-medicamentos/tabela-medicamentos.component.html
@@ -38,7 +38,7 @@
       </tbody>
     </table>
   </div>
-  <div class="row m-0" *ngIf="!loading">
+  <div class="row m-0" *ngIf="!loading && medicamentos.length > 0">
     <div class="col-12 d-flex justify-content-center">
       <pagination-controls
         (pageChange)="pageChanged($event)"
