--- a/src/app/@modules/perfil/components/tab-senha/tab-senha.component.html
+++ b/src/app/@modules/perfil/components/tab-senha/tab-senha.component.html
@@ -4,7 +4,7 @@
       <div class="card-header">
         <div class="row m-0">
           <div class="col-12 d-flex justify-content-between align-items-center p-0">
-            <h4 class="m-0">Atualizar senha</h4>
+            <h4 class="m-0">Alterar senha</h4>
           </div>
         </div>
       </div>
